Formulario de la sección contacto terminado. Aplicación de estilos y composición de la paleta de colores general.

--- a/src/components/Contacto/Contacto.css
+++ b/src/components/Contacto/Contacto.css
@@ -1,3 +1,14 @@
 #formContacto{
     display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#labelConTextarea{
+    display: flex;
+    align-items: center;
+}
+
+button{
+    background-color: #909c87;
 }
